[package]
name = "hyprsome"
description = "A small CLI apps that allows to make Hyprland's workspaces work like Awesome in multi-monitor setup"
license = "GPL-3.0"
version = "0.1.11"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.15", features = ["derive"] }
ipc-rpc = "1.2.2"
schemars = "0.8.11"
serde = "1.0.145"
serde_json = "1.0.86"
tokio = "1.21.2"
hyprland = "0.3.1"
